--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "font-awesome": "^4.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
